@@ -1,3 +1,9 @@
+2008-07-28  Suman Manjunath  <msuman@novell.com>
+
+	* exchange-account-listener.c (add_cal_esource),
+	(remove_cal_esource): Set/unset "/apps/evolution/itip/delete_processed"
+	gconf-key. 
+
 2008-07-23  Suman Manjunath  <msuman@novell.com>
 
 	* exchange-account-listener.c (add_cal_esource),
